<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/layout_facebook_outros"
    tools:context="com.keenesys.midinclude.midinclude.FacebookOutrosActivity">

    <Button
        style="@style/ButtonXLarge.FacebookAnother"
        android:text="@string/notifications"
        android:id="@+id/notifications"
        android:layout_below="@+id/home_button" />

    <Button
        style="@style/ButtonXLarge"
        android:id="@+id/home_button"
        android:onClick="goToHomeFaceOutros"
        android:layout_alignParentTop="true" />

    <Button
        style="@style/ButtonXLarge.FacebookAnother"
        android:text="@string/events"
        android:id="@+id/events"
        android:layout_below="@id/notifications" />

    <Button
        style="@style/ButtonXLarge.FacebookAnother"
        android:text="@string/birthdays"
        android:id="@+id/birthdays"
        android:layout_below="@id/events" />

</RelativeLayout>
