<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.keenesys.midinclude.midinclude.SettingsActivity">

    <Button
        style="@style/ButtonXLarge"
        android:onClick="setMotorNeed"
        android:id="@+id/motor_need"
        android:text="@string/yes"
        android:layout_above="@+id/wmotor_need"
        android:layout_marginBottom="90dp"/>

    <Button
        style="@style/ButtonXLarge"
        android:onClick="unsetMotorNeed"
        android:id="@+id/wmotor_need"
        android:text="@string/no"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_motor_need"
        android:textSize="@dimen/button_text_size"
        android:textAlignment="center"
        android:id="@+id/texto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:max="100"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:indeterminate="false"
        android:progress="25"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
